--- a/old_home_app/pubspec.yaml
+++ b/old_home_app/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.0
+  flutter_svg: ^0.21.0+1
 
   # display PDF
   flutter_pdfview: ^1.0.4
@@ -34,3 +35,11 @@ flutter:
 
   assets:
     - assets/
+    - assets/images/coffeeBackground.png
+    - assets/images/coffeeLogoEdited.png
+    - assets/images/logo.svg
+    - assets/images/coffeeBackgroundPlain.png
+    - assets/images/coffeeStand.png
+    - assets/images/coffeeStandEdited.png
+    - assets/images/icon-facebook.svg
+    - assets/pdf/1-converted.pdf
